login successfully added and signup

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   another_flushbar: ^1.10.29
   http: ^0.13.5
   fluttertoast: ^8.0.9
+  shared_preferences: ^2.0.15
   get:
 
 dev_dependencies:
